# coral

./: .gitignore  README.md  example.py  pyproject.toml
.github/workflows/: ci.yml
coral/: __init__.py  app.py  config.py  entrypoint.py  errors.py  image.py  logging.py  packaging.py  resolver.py  runtime_setup.py  serialization.py
coral/providers/: __init__.py  base.py  registry.py
coral/spec/: __init__.py  models.py
coral_cli/: main.py
coral_cli/commands/: build.py  cache.py  config.py  image.py  logs.py  provider.py  run.py  setup.py  stop.py
coral_providers_gcp/: artifacts.py  auth.py  build.py  cleanup.py  execute.py  logs.py  provider.py
coral_providers_primeintellect/: api.py  artifacts.py  execute.py  logs.py  provider.py
coral_runtime/: entrypoint.py  fetch.py  invoke.py  io.py  logging.py  serialization.py  spec.py
examples/: simple.py  simple_no_build.py  simple_no_build_rtx4090.py
tests/: test_docker_hub_builder.py  test_function_build_image_flag.py  test_prime_gpu_spec.py  test_sync_smoke.py
